--- a/schedule/templates/schedule/index.html
+++ b/schedule/templates/schedule/index.html
@@ -437,17 +437,17 @@
               <header class="w3-container w3-teal w3-center w3-padding-32"> 
                 <span onclick="document.getElementById('to_do_detail#{{x.td_id}}').style.display='none'" 
               class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                <h2 class="w3-wide"><i class="fa fa-search w3-margin-right"></i>To Do Details  : {{x.td_id}}</h2>
+                <h2 class="w3-wide"><i class="fa fa-calendar-check-o w3-margin-right"></i>To Do Details  : {{x.td_id}}</h2>
               </header>
               <div class="w3-container">
-                <p><label ><i class="fa fa-shopping-cart"></i> To Do Thing</label></p>
+                <p><label ><i class="fa fa-search"></i> What to do</label></p>
                 <input class="w3-input w3-border" type="text" placeholder="{{x.td_thing}}" readonly>
-                <p><label><i class="fa fa-user"></i> To Do Start</label></p>
+                <p><label><i class="fa fa-hourglass-1"></i> Start</label></p>
                 <input class="w3-input w3-border" type="text" placeholder="{{x.td_start}}" readonly>
-                <p><label><i class="fa fa-user"></i> To Do End</label></p>
+                <p><label><i class="fa fa-hourglass-end"></i> End</label></p>
                 <input class="w3-input w3-border" type="text" placeholder="{{x.td_end}}" readonly>
-                <p><label><i class="fa fa-user"></i> To Do Task</label></p>
-                <input class="w3-input w3-border" type="text" placeholder="{{x.task}}" readonly>
+                <p><label><i class="fa fa-server"></i> Task</label></p>
+                <input class="w3-input w3-border" type="text" placeholder="{{x.task.task_name}}" readonly>
                 <a href="{% url 'schedule:delete_todolist' x.td_id %}" onclick="return confirm_delete('{{x.td_thing}}')">
                   <button class="w3-button w3-block w3-padding-16 w3-section w3-right w3-black">Delete <i class="fa fa-check"></i></button>
                 </a>
